lambda_vm: improve tests
* Move tests into separate files
* Change hardcoded ast by ppx_lambda_vm
* Replace hard coded pretty printers by ppx show
* Use ppx_expect in order to test gas measures

--- a/tests/vm/dune
+++ b/tests/vm/dune
@@ -1,3 +1,16 @@
+(library
+ (name vm_test)
+ (modules vm_test)
+ (libraries lambda_vm alcotest))
+
+(library
+ (name test_gas)
+ (inline_tests)
+ (modules test_gas)
+ (libraries vm_test lambda_vm)
+ (preprocess
+  (pps ppx_lambda_vm ppx_expect)))
+
 (test
  (name test_vm)
  (libraries lambda_vm alcotest qcheck-alcotest)
