Revert "docker: fix static image (#522)"
This reverts commit d420fea101a5ac0d6ae33caa9909ae93f90243e1.

--- a/src/bin/dune
+++ b/src/bin/dune
@@ -23,5 +23,12 @@
 
 (env
  (static
-  (ocamlopt_flags
-   (:standard -O2 -ccopt -static))))
+  (flags
+   (:standard
+    -O2
+    -ccopt
+    -static
+    -ccopt
+    %{env:CFLAGS=/lib}
+    -cclib
+    -L%{env:LD_LIBRARY_PATH=/lib}))))
