--- a/src/metrics/dune
+++ b/src/metrics/dune
@@ -1,3 +1,3 @@
 (library
  (name metrics)
- (libraries prometheus lwt dream cmdliner fmt re))
+ (libraries prometheus-dream lwt dream cmdliner fmt re))
